netatmo-exporter/deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: netatmo-exporter
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netatmo-exporter
  template:
    metadata:
      name: netatmo-exporter
      labels:
        app: netatmo-exporter
    spec:
      containers:
      - name: netatmp-exporter
        image: dvorak/netatmo-exporter:report-errors
        ports:
        - name: alertmanager
          containerPort: 9093
