netatmo-exporter/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: netatmo-exporter
  name: netatmo-exporter
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9210"
spec:
  selector:
    app: netatmo-exporter
  ports:
    - name: netatmo-exporter
      protocol: TCP
      port: 9210
